# fidelis

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
debian/: changelog  control  copyright  rules
docs/: architecture.md  phases.md
docs/spec/: locked.md  open-questions.md
fixtures/: README.md  _make_format_set.sh  _make_sine.py  sine_44100_16.aiff  sine_44100_16.flac  sine_44100_16.m4a  sine_44100_16.opus  sine_48000_16.flac
include/fidelis/: version.hpp
include/fidelis/config/: config.hpp
include/fidelis/dbus/: service.hpp
include/fidelis/engine/: alsa_output.hpp  decoder.hpp  decoder_factory.hpp  device.hpp  engine.hpp  error.hpp  format.hpp  format_match.hpp  mixer.hpp  replaygain.hpp  ring.hpp  rt.hpp  telemetry.hpp  trace.hpp  wav.hpp
include/fidelis/hotplug/: monitor.hpp
include/fidelis/queue/: queue.hpp
include/fidelis/session/: session.hpp
include/fidelis/web/: server.hpp
packaging/: fidelis.1  fidelis.service  fidelis.spec  limits-fidelis.conf
packaging/aur/: PKGBUILD
scripts/: audit_public_repo.sh
src/: main.cpp
src/config/: config.cpp  meson.build
src/dbus/: bus.cpp  bus.hpp  fidelis_iface.cpp  fidelis_iface.hpp  meson.build  mpris_metadata.cpp  mpris_metadata.hpp  mpris_player.cpp  mpris_player.hpp  mpris_root.cpp  mpris_root.hpp  mpris_tracklist.cpp  mpris_tracklist.hpp  service.cpp  snapshot_serialize.cpp  snapshot_serialize.hpp
src/engine/: alsa_device.hpp  engine.cpp  engine_test_access.hpp  meson.build  output_iface.hpp
src/engine/alsa/: output.cpp  probe_internal.hpp
src/engine/decoder/: aiff.cpp  alac.cpp  decoders.hpp  detect.cpp  flac.cpp  mp3.cpp  mp4_demux.cpp  mp4_demux.hpp  opus.cpp  vorbis.cpp  wav.cpp
src/engine/device/: device_internal.hpp  fingerprint.cpp  list.cpp  mixer.cpp  probe.cpp  select.cpp
src/engine/dsp/: replaygain.cpp
src/engine/format/: match.cpp
src/engine/rt/: apply.cpp
src/engine/trace/: ring.cpp
src/hotplug/: meson.build  udev_monitor.cpp
src/queue/: meson.build  queue.cpp
src/session/: meson.build  session.cpp
src/web/: meson.build  server.cpp  server.hpp
tests/integration/: bit_perfect_loopback.cpp  dbus_smoke.cpp  device_list.cpp  engine_play.cpp  library_browse.cpp  meson.build  play_each_format.cpp  telemetry_dump.cpp  wav_play.cpp  xrun_stress.cpp
tests/support/: byte_compare.hpp  loopback_capture.cpp  loopback_capture.hpp  mock_monitor.hpp
tests/unit/: config_toml.cpp  dbus_metadata.cpp  decoder_aiff.cpp  decoder_alac.cpp  decoder_check.hpp  decoder_flac.cpp  decoder_mp3.cpp  decoder_opus.cpp  decoder_vorbis.cpp  decoder_wav.cpp  device_select.cpp  device_stable_id.cpp  dsd_refused.cpp  engine_format_refused.cpp  engine_fsm.cpp  engine_rate_switch.cpp  format_match.cpp  fs_browse.cpp  hotplug_fsm.cpp  library_scan.cpp  library_schema.cpp  library_search.cpp  loopback_byte_compare.cpp  meson.build  pipeline_snapshot.cpp  queue_advance.cpp  replaygain.cpp  rt_apply.cpp  scanner_protect_unmounted.cpp  session_persistence.cpp  trace_ring.cpp  wav_decode.cpp  web_security.cpp
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/components/: AlbumDetail.svelte  AlbumGrid.svelte  BitPerfectPill.svelte  CoverArt.svelte  DevicePicker.svelte  FolderBrowse.svelte  Mixer.svelte  Nav.svelte  PipelineStageCard.svelte  QueueList.svelte  SearchBar.svelte  Seekbar.svelte  Sparkline.svelte  TransportControls.svelte
web/src/lib/: api.ts  colorthief.ts  stores.ts  utils.ts  ws.ts
web/src/pages/: Library.svelte  NowPlaying.svelte  Pipeline.svelte  Queue.svelte
